# mini_btc

./: .gitignore  Block.cpp  Block.h  CMakeLists.txt  LICENSE  Transaction.cpp  Transaction.h  UTXOManager.cpp  UTXOManager.h  crypto.cpp  main.cpp  readme.md  sha256.cpp  sha256.h  vcpkg.json
src/: main.cpp  main_p2p.cpp
src/Unittest/: CMakeLists.txt
src/Unittest/DoubleSpendProtection/: CMakeLists.txt  test_block_validation.cpp
src/blockchain/: Block.cpp  Block.h  BlockChain.cpp  BlockChain.h
src/crypto/: Crypto.cpp  Crypto.h
src/mempool/: Mempool.cpp  Mempool.h
src/p2p/: NetworkSimulator.cpp  NetworkSimulator.h  Node.cpp  Node.h
src/sha256/: SHA256.cpp
src/transaction/: Transaction.cpp  Transaction.h
src/utxomanager/: UTXOManager.cpp  UTXOManager.h
